--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "firebase": "^10.12.2",
     "jodit-react": "^4.1.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
